--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
+        "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.9",
+        "socialiteproviders/saml2": "^4.7",
         "symfony/html-sanitizer": "^7.0",
         "tonysm/rich-text-laravel": "^3.1"
     },
